# search_algorithms

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  algorithms.c  algorithms.h  main.c  test.c
src/state/: CMakeLists.txt  state.c  state.h
